--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -18,7 +18,7 @@
   --global-distill-app-color: #{$grey-color};
   --global-divider-color: rgba(0, 0, 0, 0.1);
   --global-card-bg-color: #{$white-color};
-  --global-highlight-color: #{$red-color-dark};
+  --global-highlight-color: #{$green-color-dark};
   --global-back-to-top-bg-color: rgba(
     #{color.channel($black-color, "red", $space: rgb)},
     #{color.channel($black-color, "green", $space: rgb)},
@@ -38,7 +38,7 @@
   --global-warning-block-text: #6b5900;
   --global-warning-block-title: #b29400;
   --global-danger-block: #c00;
-  --global-danger-block-bg: #e2f5ec;
+  --global-danger-block-bg: #ffe0e0;
   --global-danger-block-text: #600;
   --global-danger-block-title: #c00;
 
@@ -107,7 +107,7 @@ html[data-theme="dark"] {
   --global-warning-block-text: #6b5900;
   --global-warning-block-title: #b29400;
   --global-danger-block: #c00;
-  --global-danger-block-bg: #e2f5ec;
+  --global-danger-block-bg: #ffe0e0;
   --global-danger-block-text: #600;
   --global-danger-block-title: #c00;
 
