--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -92,6 +92,8 @@ layout: default
                   {% include resume/education.liquid %}
                 {% when 'work' %}
                   {% include resume/work.liquid %}
+                {% when 'academic services' %}
+                  {% include resume/academia.liquid %}
                 {% when 'volunteer' %}
                   {% include resume/volunteer.liquid %}
                 {% when 'projects' %}
