--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -92,7 +92,7 @@ layout: default
                   {% include resume/education.liquid %}
                 {% when 'work' %}
                   {% include resume/work.liquid %}
-                {% when 'academic services' %}
+                {% when 'academia' %}
                   {% include resume/academia.liquid %}
                 {% when 'volunteer' %}
                   {% include resume/volunteer.liquid %}
